Clean up classes & make order in unittests relevant